--------------------------------------------------------------------------------------------------
Release notes version 1.7.8 : Enhancements, modifications and corrected bugs since version 1.7.7 :
--------------------------------------------------------------------------------------------------
07/12/18 (TRUST)  Bug fixed   : Heat exchange boundary condition in VEF was not implicited in conduction equation
25/10/18 (TRUST)  Portability : Released version of PETSc upgraded to 3.10.0
25/10/18 (TRUST)  Performance : Performance of Cholesky Superlu version improved on symmetric matrix  
25/09/18 (TRUST)  Bug fixed   : Possible crash in VEF diffusive operators after reading conductivity field in a MED file
06/09/18 (TRUST)  Minor change: Possibility to specify the baltik name in trust -baltik
06/09/18 (TRUST)  Minor change: Writing .sauv when tcpumax reached or .stop detected
25/07/18 (TRUST)  New feature : Add VEF support for mass fraction transport 
23/07/18 (TRUST)  Bug fixed   : Issue for some internal boundaries in VDF 
29/06/18 (TRUST)  Portability : Support of irene CCRT cluster
--------------------------------------------------------------------------------------------------
Release notes version 1.7.7 : Enhancements, modifications and corrected bugs since version 1.7.6 :
--------------------------------------------------------------------------------------------------
03/04/18 (TRUST)  New keyword : Postprocess velocity gradient using keyword gradient_vitesse
09/03/18 (TRUST)  Major change: Evolution of the  *_ustar_mean_only.out file format with mean(u*) and mean(d+)
28/02/18 (TRUST)  Minor change: Update the use of dt_sauv keyword assigned to zero to disable the writing of the .sauv file
28/02/18 (TRUST)  New keyword : Add disable_progress, disable_dt_ev and disable_TU flags to disable the writing of these output files
28/02/18 (TRUST)  New feature : New disable_stop option to disable the writing of the .stop file (Usage: trust MyJDD.data -disable_stop)